# badlands

./: .environment.yml.outdated  .gitattributes  .gitignore  MANIFEST.in  README.md  __init__.py  environment.yml  meson.build  pyproject.toml  requirements.txt  setup.py
.github/workflows/: conda_deploy.yml  pypi-deploy.yml
Examples/: Copy2Volume.ipynb  demo.py  input_complete.xml  mpi_example.py
Examples/HRtest/: HRrun.ipynb  hrtest.xml  launch_mpi.py
Examples/basin/: basin.xml  strataAnalyse_basin.ipynb  stratalAnalyse_basin.py
Examples/crater/: crater.ipynb  crater.xml
Examples/data/: demo-input.xml
Examples/delta/: delta.ipynb  delta.xml  strataAnalyse_delta.ipynb  stratalAnalyse.ipynb  stratalAnalyse_delta.py
Examples/dyntopo/: dynTopo.ipynb  input.xml  runModel.ipynb  seqStrata.ipynb  strataAnalyse.ipynb  stratalAnalyse.py  stratalMesh.ipynb
Examples/etopo/: etopo.ipynb  etopo.xml
Examples/flexure/: elastic_map.ipynb  flexure.ipynb  flexure.xml
Examples/mountain/: Hydrometrics.ipynb  Morphometrics.ipynb  morphoGrid.py  mountain.ipynb  mountain.xml
Examples/rift/: rift.ipynb  rift.xml
Examples/rockTrack/: DepoLayer.ipynb  buildLayer.ipynb  buildMesh.ipynb  delta2.xml  input.xml  run.ipynb  runBadlands.ipynb  stratiMesh.py  visBadlands.ipynb
Examples/strikeslip/: strike-slip.ipynb  strike-slip.xml
Examples/testDev/: localupdate.ipynb
Examples/varCanyon/: varInput.xml  varRun.ipynb
badlands/: COPYING  Makefile  README.md  badlands_App.f90  meson.build  model.py  pyproject.toml  requirements.txt  setup.py
badlands-doc/: README.md
badlands-doc/example1/: input_detachment.xml
badlands-doc/example2/: input_mount.xml
badlands-doc/example4/: input.xml
badlands-doc/example5/: input.xml
badlands-doc/example6/: input.xml
badlands-model.github.io/: LICENSE.md  README.md  _config.yml  about.md
badlands-model.github.io/_includes/: sidebar.html
badlands-model.github.io/_posts/: 2015-08-05-Dependencies.md  2015-08-06-Examples-ctd.md  2015-08-06-Examples.md  2015-08-07-SummerIntern.md  (+9 more)
badlands.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
badlands/CouplerUtils/: CouplerComponent.f90  Makefile
badlands/EarthModel/: EarthForces.f90  IsostaticFlexure.f90  Makefile  UnderworldCpl.f90
badlands/GeoMesh/: Geometry.f90  Makefile  ReadForces.f90  ReadGeomorphology.f90  ReadTopology.f90  Restart.f90  VisualiseGeo.f90
badlands/GeoMesh/Interpolator/: Bilinear.f90  Bivariate.f90  Gaussian.f90
badlands/GeoMesh/TreeSearch/: Orderpack.f90  Orderpack2.f90  kdtree.f90  kdtree2.f90
badlands/GeoMesh/Triangulator/: TriangleCall.c  TriangleCall.h  triangle.c
badlands/GlobalUtils/: ForcesClass.f90  GlobalClass.f90  HydrologyClass.f90  Makefile  MeshPartition.f90  Sorting.f90  TopologyClass.f90
badlands/GlobalUtils/Utility/: StringUtility.f90
badlands/IceSheet/: IceModel.f90  Makefile
badlands/OceanCirc/: Circulation.f90  Makefile  OceanModel.f90  WaveModel.f90
badlands/OceanCirc/SwanSrc/: Makefile  SwanBndStruc.f90  SwanBpntlist.f90  SwanCheckGrid.f90  SwanCompUnstruc.f90  SwanConvAccur.f90  SwanCoupler.f90  SwanCreateEdges.f90  SwanCrossObstacle.f90  SwanDispParm.f90  SwanGridVert.f90  SwanGriddata.f90  SwanInterpolateAc.f90  SwanInterpolatePoint.f90  SwanPointinMesh.f90  SwanPropvelS.f90  SwanPropvelX.f90  SwanReadADCGrid.f90  SwanReadTriangleGrid.f90  SwanSGFM.f  SwanSweepSel.f90  SwanTranspX.f90  SwanVertlist.f90  ocpids.f  serv_xnl4v5.f90  swancom5.f  swanmain.f  swanout1.f  swanparll.f  swanpre1.f  swmod1.f  swmod2.f
badlands/SpmModel/: Geomorphology.f90  Hydrology.f90  Makefile  SpmHillslope.f90  VisualiseDrainage.f90  VisualiseSurface.f90  WatershedDelineation.f90
badlands/SubStrat/: Makefile  ReadStratal.f90  StratHillslope.f90  StratMorphology.f90  StratalClass.f90  StratalFunctions.f90  VisualiseStrata.f90
badlands/badlands/: model.py
badlands/badlands/flow/: flowNetwork.py  visualiseFlow.py
badlands/badlands/forcing/: __init__.py  carbGrowth.py  forceSim.py  isoFlex.py  pelagicGrowth.py  xmlParser.py
badlands/badlands/simulation/: __init__.py  buildFlux.py  buildMesh.py  checkPoints.py  waveSed.py
badlands/badlands/surface/: FVmethod.py  __init__.py  elevationTIN.py  partitionTIN.py  raster2TIN.py  visualiseTIN.py
badlands/badlands/underland/: __init__.py  carbMesh.py  eroMesh.py  strataMesh.py  stratiWedge.py
badlands/conda/: environment.yml  meta.yaml
badlands/config/: Makefile.cfg.linux  Makefile.cfg.magnus.gnu  Makefile.cfg.magnus.intel  Makefile.cfg.nectar  Makefile.cfg.osx  Makefile.cfg.raijin  Makefile.cfg.raijin_intel  Makefile.inc
badlands/docs/: Makefile  README.md  api.rst  cite.rst  conf.py  examples.rst  index.rst  install.rst  social.rst  use.rst  xml.rst
badlands/forcing/: pelagicGrowth.py  xmlParser.py
badlands/simulation/: buildMesh.py
badlands/surface/: FVmethod.py
badlands/underland/: stratiWedge.py
badlands/utils/: Makefile  classfv.f90  classpd.f90  flowalgo.f90  flowalgo.pyf  flowalgomodule.c  fvframe.f90  fvframe.pyf  fvframemodule.c  ormodelmodule.c  pdalgo.f90  pdalgo.pyf  pdalgomodule.c  sfd.c  sfdmodule.c  waveseds.pyf  wavesedsmodule.c
conda/: environment.yml  meta.yaml
doc/: Makefile  README.md  conf.py  flow.rst  forcing.rst  hillslope.rst  index.rst  internal.rst  models.rst  public.rst  requirements.txt  simulation.rst  surface.rst  underland.rst
docs/: README.md  cite.rst  conf.py  examples.rst  index.rst  install.rst  proc.rst  requirements.txt  social.rst  use.rst  xml.rst
flow/: flowNetwork.py  visualiseFlow.py
libUtils/: FASTloop.f90  FLOWalgo.f90  FLWnetwork.f90  FVclass.f90  Makefile  PDalgo.f90  SFDalgo.f90
notebook/: test.ipynb
pyBadlands/: __init__.py  model.py  remote.py
surface/: __init__.py  elevationTIN.py  partitionTIN.py  raster2TIN.py  visualiseTIN.py
test/: ModelDemo.ipynb  RunBadlands-OneStep.ipynb  RunBadlands.ipynb  bench.py  demo.py  input.xml  input_complete.xml
utils/: Makefile  classfv.f90  classoro.f90  classpd.f90  fvframe.pyf  generate_pyf.sh  ormodel.f90  ormodel.pyf  pdalgo.f90  pdalgo.pyf  sfd.c  sfd.pyf  waveseds.f90
(+690 files in other folders)
