[build-system]
requires = ["setuptools>=61", "wheel", "meson>=1.4.0", "meson-python", "numpy==1.26.4"]
build-backend = "mesonpy"

[project]
name    = "badlands"
version = "2.3"
authors = [ 
  {name="Tristan Salles", email="tristan.salles@sydney.edu.au"},
]
description="Basin and Landscape Dynamics (Badlands) is a TIN-based landscape evolution model"
readme = {file = "../README.md", content-type = "text/markdown"}
requires-python=">=3.7"
dependencies = [
  "triangle",
  "meshplex@git+https://github.com/kinnala/meshplex",
  "numpy>=1.15.0",
  "six>=1.11.0",
  "setuptools>=38.4.0",
  "gFlex>=1.1.0",
  "scikit-image>=0.15",
  "pandas>=0.24",
  "scipy>=1.2",
  "h5py>=2.8.0",
  "matplotlib>=3.0"
]
maintainers = [
    {name="Julian Giordani", email="julian.giordani@sydney.edu.au"},
    {name="Tristan Salles", email="tristan.salles@sydney.edu.au"},
]
license = {file = "../LICENSE"}
classifiers= [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/badlands-model"
Documentation = "https://badlands.readthedocs.io/"

